# toy-system-resource-monitor

./: .env_example  README.md  config.py  create_venv.sh  pyproject.toml
consumer/: consumer_test.py
producer/: producer_test.py  system_resource_producer.py
